@@ -6,6 +6,8 @@ import com.datadelivery.WorldCupPool2018.object.GraphResponseBody;
 import com.datadelivery.WorldCupPool2018.object.GraphRow;
 import com.datadelivery.WorldCupPool2018.object.GraphRowValue;
 import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
+import com.google.common.collect.Sets;
 import com.mongodb.BasicDBObject;
 import com.mongodb.client.MongoCollection;
 import com.mongodb.client.MongoCursor;
@@ -13,7 +15,13 @@ import com.mongodb.client.MongoDatabase;
 import org.bson.Document;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+import static com.mongodb.client.model.Sorts.ascending;
+import static com.mongodb.client.model.Sorts.orderBy;
 
 /**
  * Created by handy.kestury on 6/12/2018.
@@ -23,8 +31,12 @@ public class DataService {
 
   MongoDatabase database;
 
+  private final static String FINISHED_STATUS = "FINISHED";
+
+  private final static String TIE_STATUS = "Tie";
+
   public MongoDatabase initConnection() {
-    if (database == null) {
+    if(database == null) {
       database = DBConnectionHelper.getConnection();
     }
     return database;
@@ -34,14 +46,15 @@ public class DataService {
 
     GraphResponseBody result = new GraphResponseBody();
 
-    List<GraphColumn> players = Lists.newArrayList();
+    final List<GraphColumn> players = Lists.newArrayList();
+    final Map<String, Double> playerOrder = Maps.newTreeMap();
 
     initConnection();
     players.add(new GraphColumn("0", "Match Day"));
-    MongoCollection userCollection = database.getCollection("Users");
-    MongoCollection userMatchCollection = database.getCollection("UserMatches");
+    final MongoCollection userCollection = database.getCollection("Users");
+    final MongoCollection userMatchCollection = database.getCollection("UserMatches");
 
-    MongoCursor<Document> userCursor = userCollection.find().iterator();
+    final MongoCursor<Document> userCursor = userCollection.find().sort(orderBy(ascending("name"))).iterator();
     int id = 0;
     while (userCursor.hasNext()) {
       id++;
@@ -49,26 +62,42 @@ public class DataService {
       players.add(new GraphColumn(Integer.toString(id), obj.getString("name")));
     }
 
-    MongoCursor<String> matchCursor = userMatchCollection.distinct("match", String.class).iterator();
+    BasicDBObject seQIDQuery = new BasicDBObject();
+    BasicDBObject notNull = new BasicDBObject("$ne", null);
+    seQIDQuery.put("totalBalance", notNull);
+
+    MongoCursor<Document> matchCursor = userMatchCollection.find(seQIDQuery).iterator();
+
     MongoCursor<Document> userMatchCursor = null;
 
     List<GraphRow> balance = Lists.newArrayList();
+    Set<Integer> matches = Sets.newTreeSet();
     try {
       while (matchCursor.hasNext()) {
-        String matchId = matchCursor.next();
+        Integer seqID = matchCursor.next().getInteger("seqID");
+        matches.add(seqID);
+      }
+
+      for (double seqID: matches) {
         BasicDBObject query = new BasicDBObject();
-        query.put("match", matchId);
+        query.put("seqID", seqID);
 
         GraphRow match = new GraphRow();
         List<GraphRowValue> value = Lists.newArrayList();
-        value.add(new GraphRowValue(Float.valueOf(matchId)));
-        userMatchCursor = userMatchCollection.find(query).iterator();
+        value.add(new GraphRowValue(new Float(seqID)));
+
+        userMatchCursor = userMatchCollection.find(query).sort(orderBy(ascending("name"))).iterator();
         while (userMatchCursor.hasNext()) {
           Document um = userMatchCursor.next();
-          if (um.get("totalBalance") != null) {
-            value.add(new GraphRowValue(new Float(um.getDouble("totalBalance"))));
+          if(um.get("totalBalance") != null) {
+            playerOrder.put(um.getString("user"), um.getDouble("totalBalance"));
           }
         }
+
+        for(Double bal : playerOrder.values()) {
+          value.add(new GraphRowValue(new Float(bal)));
+        }
+
         match.setC(value);
         balance.add(match);
       }
@@ -77,8 +106,12 @@ public class DataService {
       result.setRows(balance);
     }
     finally {
-      userMatchCursor.close();
-      matchCursor.close();
+      if (userMatchCursor != null) {
+        userMatchCursor.close();
+      }
+      if (matchCursor != null) {
+        matchCursor.close();
+      }
     }
     return result;
   }
@@ -90,12 +123,92 @@ public class DataService {
     return result;
   }
 
-  public static void main(final String[] arg) {
+  public void updateBalance(final List<Object> fixtures) {
+    initConnection();
+
+    MongoCursor<Document> matchCursor = null;
+    MongoCursor<Document> userCursor = null;
     try {
-      DataService serv = new DataService();
-        serv.getBalance();
-    } catch (Exception e) {
-      e.printStackTrace();
+      MongoCollection userMatchCollection = database.getCollection("UserMatches");
+      MongoCollection userCollection = database.getCollection("Users");
+
+      Map<String, Double> totalBalance = Maps.newHashMap();
+      userCursor = userCollection.find().iterator();
+      while (userCursor.hasNext()) {
+        Document user = userCursor.next();
+        totalBalance.put(user.getString("name"), user.getDouble("totalBalance"));
+      }
+
+      BasicDBObject query = new BasicDBObject();
+      for(int i = 0; i < fixtures.size(); i++) {
+        Map<String, String> match = (Map<String, String>) fixtures.get(i);
+        if(FINISHED_STATUS.equalsIgnoreCase(match.get("status"))) {
+          String matchId = match.get("MatchID");
+          query.put("match", matchId);
+          query.put("totalBalance", null);
+          matchCursor = userMatchCollection.find(query).iterator();
+
+          List<Document> individualMatch = Lists.newArrayList();
+          double totalBetPerRound = 0;
+          int totalWinner = 0;
+
+          String matchWinner = findWinner(match);
+
+          //Find the total winner
+          while (matchCursor.hasNext()) {
+            Document userMatch = matchCursor.next();
+            individualMatch.add(userMatch);
+            totalBetPerRound = totalBetPerRound + userMatch.getDouble("betAmount");
+            if(matchWinner.equalsIgnoreCase(userMatch.getString("teamPick"))) {
+              totalWinner++;
+            }
+          }
+
+          for(Document userMatch : individualMatch) {
+            double betAmount = null == userMatch.get("betAmount") ? 0 : userMatch.getDouble("betAmount");
+            double newBalance = totalBalance.get(userMatch.getString("user"));
+            if (totalWinner > 0) {
+              newBalance = newBalance - betAmount;
+            }
+
+            if(matchWinner.equalsIgnoreCase(userMatch.getString("teamPick"))) {
+              newBalance = newBalance + totalBetPerRound/totalWinner;
+            }
+
+            BasicDBObject newDocument = new BasicDBObject();
+            newDocument.append("$set", new BasicDBObject().append("totalBalance", newBalance));
+
+            BasicDBObject searchUserQuery = new BasicDBObject().append("name", userMatch.getString("user"));
+            userCollection.updateOne(searchUserQuery, newDocument);
+
+            BasicDBObject searchUserMatchQuery = new BasicDBObject()
+                .append("user", userMatch.getString("user"))
+                .append("match", userMatch.getString("match"));
+
+            userMatchCollection.updateOne(searchUserMatchQuery, newDocument);
+
+            totalBalance.put(userMatch.getString("user"), newBalance);
+          }
+        } else {
+          break;
+        }
+      }
+    } finally {
+      matchCursor.close();
+      userCursor.close();
     }
+
+  }
+
+  private String findWinner(Map<String, String> match) {
+    String winner = null;
+    if(Integer.parseInt(match.get("goalsHomeTeam")) > Integer.parseInt(match.get("goalsAwayTeam"))) {
+      winner = match.get("homeTeamName");
+    } else if(Integer.parseInt(match.get("goalsHomeTeam")) < Integer.parseInt(match.get("goalsAwayTeam"))) {
+      winner = match.get("awayTeamName");
+    } else {
+      winner = TIE_STATUS;
+    }
+    return winner;
   }
 }
